@@ -1,57 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Loading</title>
-<style type="text/css">
-body {
-  font-family: arial, helvetica, sans serif;
-  font-size: 11px;
-  background: #fff;
-  color: #333;
-}
-
-a:link, a:visited {
-	color: #0B55C4;
-	text-decoration: none;
-}
-
-a:hover {
-	color: #009;
-}
-
-p {
-  font-family: arial, helvetica, sans serif;
-  font-size: 11px;
-}
-
-h2 {
-  font-family: arial, helvetica, sans serif;
-  font-size: 13px;
-  font-weight: bold;
-}
-
-h3 {
-  font-family: arial, helvetica, sans serif;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-h4 {
-  font-family: arial, helvetica, sans serif;
-  font-size: 11px;
-  font-weight: bold;
-}
-
-li {
-  font-family: arial, helvetica, sans serif;
-  font-size: 11px;
-}
-
-pre {
-  font-size: 11px;
-}
-</style>
-</head>
-<body>&nbsp;</body>
-</html>
