@@ -1,20 +1,0 @@
-<?php
-/**
- * @package		Joomla.Installation
- * @copyright	Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
- * @license		GNU General Public License version 2 or later; see LICENSE.txt
- */
-
-defined('_JEXEC') or die;
-
-jimport('joomla.filesystem.file');
-
-/**
- * Site migration model for the Joomla Core Installer.
- *
- * @package		Joomla.Installation
- * @since		1.6
- */
-class JInstallationModelMigration extends JModelLegacy
-{
-}
