@@ -30,6 +30,7 @@ $ -> Language fix or change
  $ [#28371] Improve user feedback during automatic version update. Lang strings only!
  # [#28652] *Strict standards administrator/components/com_config/models/application.php
  ^ [#28380] *Normalizing Beez_20 css and js loading
+ ^ [#28642] Clean up the installation a tiny bit. Thanks Rouven
 
 10-Jun-2012 Jean-Marie Simonet
  # [#28426] only a single JFormFieldColor field can exist (functionally) within a form. Thanks Dennis
